# fastapi-learn

./: .env.example  .gitignore  .pre-commit-config.yaml  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 3a0a14bdb406_init_tables.py  523665eb5747_sync_models.py  57f91720e2e2_init_tables.py  81294d2d61f2_sync_models.py
app/: main.py
app/api/v1/: deps.py  routes.py
app/api/v1/endpoints/: auth.py  items.py
app/core/: config.py  logging.py
app/db/: session.py
app/middlewares/: request_id.py
app/models/: item.py  user.py
app/repositories/: base_repository.py  item_repository.py  user_repository.py
app/schemas/: auth.py  common.py  item.py  user.py
app/security/: jwt.py
app/services/: auth_service.py  item_service.py
app/utils/: pagination.py
fastapi_starter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_auth.py  test_items.py
tests/api/: test_auth.py  test_health.py  test_items.py
