[project]
name = "fastapi_starter"
version = "0.1.0"
description = "Minimal FastAPI + PostgreSQL + SQLAlchemy + Alembic + JWT"
requires-python = ">=3.12"
authors = [{name = "Nur Ahmadi"}]
readme = "README.md"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "passlib[bcrypt]>=1.7",
  "PyJWT>=2.8",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "structlog>=24.2.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "aiosqlite>=0.21",
  "asgi-lifespan>=2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E","F","I","UP","B","N","ASYNC","RUF"]
ignore = ["S101","B008"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing"
asyncio_mode = "auto"
